--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -12,28 +12,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/html-elements": "^0.11.2",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.3",
+    "@rn-primitives/aspect-ratio": "^1.1.0",
+    "@rn-primitives/avatar": "^1.1.0",
+    "@rn-primitives/dropdown-menu": "^1.1.0",
+    "@rn-primitives/label": "^1.1.0",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
     "@supabase/supabase-js": "^2.38.4",
     "app": "*",
+    "clsx": "^2.1.1",
     "expo": "^52.0.42",
     "expo-constants": "~17.0.8",
+    "expo-image": "~2.0.7",
     "expo-linking": "~7.0.5",
+    "expo-navigation-bar": "~4.0.9",
     "expo-router": "~4.0.6",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "lucide-react-native": "^0.487.0",
     "moti": "^0.30.0",
     "nativewind": "latest",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.10",
+    "tailwind-merge": "^3.1.0",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
@@ -47,6 +61,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react-compiler-runtime": "19.0.0-beta-3229e95-20250315",
+    "react-native-svg-transformer": "^1.0.1",
     "tailwindcss": "^3.4.0",
     "typescript": "~5.3.3"
   },
