--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -10,18 +10,23 @@
     "post-install": "patch-package"
   },
   "dependencies": {
+    "@rn-primitives/portal": "^1.1.0",
     "app": "*",
+    "file-loader": "^6.2.0",
     "next": "^15.2.4",
+    "nextjs-toploader": "^3.8.16",
     "patch-package": "8.0.0",
     "raf": "^3.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-native-svg": "^15.11.2",
-    "react-native-web": "0.19.13"
+    "react-native-svg": "14.1.0",
+    "react-native-web": "0.19.13",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "eslint-config-next": "13.2.0",
-    "string-replace-loader": "^3.1.0"
+    "string-replace-loader": "^3.1.0",
+    "tailwindcss": "^3.4.14"
   }
 }
