--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "0.19.13",
+    "tailwind-scrollbar": "^4.0.2",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
